...
                        animation: animation
                    ) {
                        withAnimation(AppAnimation.spring) { appState.selectedTab = 1 }
                    }
                    
                    TabButton(
                        title: "Giỏ hàng",
                        icon: "cart_tab",
                        isSelect: appState.selectedTab == 2,
                        badgeCount: cartVM.itemCount,
                        animation: animation
                    ) {
                        withAnimation(AppAnimation.spring) { appState.selectedTab = 2 }
...
